<resources>
    <string name="app_name">Hotel Pos App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy_khata">Easy Khata</string>
    <string name="get_opt">Get opt</string>
    <string name="home">Home</string>
    <string name="money">Money</string>
    <string name="more">More</string>

    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="business_name">Business Name</string>
    <string name="select_location">Select Location</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="already_member">Already Member</string>
    <string name="add_location">Add Location</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="edit_business_name">Edit Business Name</string>
    <string name="enter_your_business_name">Enter your business name</string>
    <string name="save">SAVE</string>
    <string name="create_new_khata_business">CREATE NEW KHATA BUSINESS</string>
    <string name="refresh">Refresh</string>
    <string name="sign_out">Sign Out</string>
    <string name="detail">Detail</string>
    <string name="setting">Setting</string>
    <string name="help_support">Help/Support</string>
    <string name="about_us">About Us</string>
    <string name="logout">LogOut</string>
    <string name="add_customers">Add Customers</string>
    <string name="collection">Collection</string>
    <string name="edit">Edit</string>
    <string name="add_bill_no">Add Bill No.</string>
    <string name="enter_details_item_name_bill_no_quantity">Enter Details (item name, bill no, quantity..)</string>
    <string name="attach_bills">Attach Bills</string>
    <string name="date">Date</string>
    <string name="do_you_want_to_use_department">Do you want to use Department?</string>
    <string name="item_name">Item Name</string>
    <string name="unit_size">Unit Size</string>
    <string name="carton_size">Carton Size</string>
    <string name="cost_price">Cost Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="do_you_want_to_add_vendor">Do you want to add vendor?</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="rs">Rs </string>
    <string name="stock">Ctn</string>
    <string name="department">Department</string>
    <string name="document">Purchase</string>
    <string name="doc_no">Doc.no.</string>
    <string name="select_customer">Select Customer</string>
    <string name="un_authorize">Unauthorize</string>
    <string name="retrieve">Retrieve</string>
    <string name="select_products">Select Products</string>
    <string name="select">Select</string>
    <string name="cost">cost</string>
    <string name="free">free</string>
    <string name="qty">Qty</string>
    <string name="product_detail">Product Detail</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="badNumber">bad number</string>
    <string name="authorize">Authorize</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="sale">Sale</string>
    <string name="sale_return">Sale Return</string>
    <string name="document_purchase_return">Purchase Return</string>
    <string name="add_image">Add Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="item_image">Item Image</string>
    <string name="select_image">Select Image</string>
    <string name="loading">Loading</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="attached_bill">Attached Bill</string>
    <string name="item">Item</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="scheme">Scheme</string>
    <string name="free_qty">Free Qty</string>
    <string name="ctn">CTN</string>
    <string name="s_qty">S-Qty</string>
    <string name="order">Order</string>
    <string name="send">Send</string>
    <string name="add_table">Add Table</string>
    <string name="table_name">Table Name</string>
    <string name="select_status">Select Status</string>
    <string name="pay">Pay:</string>
    <string name="receipt">Receipt</string>
    <string name="drawer">Drawer</string>
    <string name="customer">Customer</string>
    <string name="clear">Clear</string>
    <string name="total">Total:</string>
    <string name="paid">Paid:</string>
    <string name="change">Change:</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="exact">Exact</string>

</resources>