<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.softvalley.hotelpos.views.sale.viewModel.OrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sv_selected_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_customer"
            android:text="@={viewModel.selectedCustomerName}"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_customer"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sv_selected_customer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            tools:listitem="@layout/party_card"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_customer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>