<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:xmnls="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <import type="com.softvalley.hotelpos.utils.Converter"/>
        <variable
            name="key"
            type="Integer" />
        <variable
            name="viewModel"
            type="com.softvalley.hotelpos.views.purchase.viewmodel.PurchaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_table"
            android:textSize="20sp"
            android:textColor="@color/app_theme_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/app_theme_color"
            app:layout_constraintTop_toBottomOf="@id/tv_heading"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintEnd_toEndOf="@id/tv_heading"
            android:layout_marginTop="4dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_name"
            android:textColorHint="@color/app_theme_color"
            xmnls:boxBackgroundColor="@color/white"
            xmnls:hintTextColor="@color/app_theme_color"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            android:elevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_table_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:selectAllOnFocus="true"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_select_status_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="5dp"
            android:hint="@string/select_status"
            android:textColorHint="@color/app_theme_color"
            app:boxBackgroundColor="@color/white"
            app:endIconTint="@color/app_theme_color"
            app:hintTextColor="@color/app_theme_color"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name_layout"
            >

            <AutoCompleteTextView
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton

            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:cornerRadius="5dp"
            app:elevation="5dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_select_status_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_done"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/white"
            app:cornerRadius="5dp"
            app:elevation="5dp"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>