<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.softvalley.hotelpos.views.sale.viewModel.PaymentViewModel" />
    </data>

    <GridLayout
        android:id="@+id/Gl_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowCount="6"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"

            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("clear")}'
            android:text="@string/clear"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_custom"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_M_Plus"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:text="@string/exact"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_custom"
            app:cornerRadius="5dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Back"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("remove")}'
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/gray_custom"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_outline_backspace_24"
            app:iconGravity="textStart"
            app:iconTint="@color/black"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_drawer"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("-")}'
            android:text="@string/drawer"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_custom"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_7"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("7")}'
            android:text="7"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_8"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("8")}'
            android:text="8"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_9"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("9")}'
            android:paddingVertical="10dp"
            android:text="9"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_receipt"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("recipt")}'
            android:paddingVertical="10dp"
            android:text="@string/receipt"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_custom"
            app:cornerRadius="5dp"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_4"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("4")}'
            android:text="4"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_5"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("5")}'
            android:text="5"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_6"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("6")}'
            android:text="6"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_1"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("1")}'
            android:text="1"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_2"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("2")}'
            android:text="2"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_3"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("3")}'
            android:text="3"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pay"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("pay")}'
            android:text="@string/pay"
            android:textColor="@color/white"
            app:backgroundTint="@color/custom_red_color"
            app:cornerRadius="5dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_0"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"

            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick("0")}'
            android:text="0"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dot"
            style="@style/FunctionalButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:onClick='@{()-> viewModel.onClick(".")}'
            android:text="."
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp" />


    </GridLayout>
</layout>